src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
	.text-balance {
		text-wrap: balance;
	}

	.image-backdrop {
		@apply absolute top-0 bottom-0 h-full w-full flex justify-center items-center bg-slate-700 bg-opacity-60 opacity-0 hover:opacity-100 transition-opacity duration-200 ease-in-out text-white text-2xl;
	}
}

.grid:after {
	content: "";
	display: block;
	clear: both;
}

.grid-sizer,
.grid-item {
	width: calc(33.333% - 5px);
	margin-bottom: 5px;
}

.grid-item {
	float: left;
}

.link-underline {
	border-bottom-width: 0;
	background-image: linear-gradient(transparent, transparent),
		linear-gradient(theme("colors.slate.600"), theme("colors.slate.600"));
	background-size: 0 2px;
	background-position: 0 100%;
	background-repeat: no-repeat;
	transition: background-size 0.2s ease-in-out;
}

.link-underline:hover,
.link-underline.active {
	background-size: 100% 2px;
	background-position: 0 100%;
}

